--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,10 +1,10 @@
-FROM node:14.16.0-alpine
+FROM node:18.19.0-alpine
 
 WORKDIR /usr/src/app
 
-RUN apk update && \
-    apk add python && \
-    apk add make && \
-    apk add g++
+# RUN apk update && \
+#     apk add python && \
+#     apk add make && \
+#     apk add g++
 
 CMD [ "/bin/sh" ]
