--- a/package.json
+++ b/package.json
@@ -5,34 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test": "jest"
+    "lint": "vue-cli-service lint"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": ">=9"
   },
   "dependencies": {
-    "axios": "^0.21.2",
-    "core-js": "^3.6.5",
-    "postcss": "8.2.13",
-    "ssri": "8.0.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.5.1",
-    "vuex": "^4.0.2"
+    "vue": "^2.7.14",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/test-utils": "^1.1.3",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "jest": "^26.6.3",
-    "jsdom": "^16.5.1",
-    "jsdom-global": "^3.0.2",
-    "vue-jest": "^3.0.7",
-    "vue-template-compiler": "^2.6.11"
+    "@vue/cli": "^5.0.8",
+    "@vue/cli-service": "^5.0.8"
   },
   "eslintConfig": {
     "root": true,
@@ -54,19 +39,5 @@
     "not dead"
   ],
   "_id": "app@0.1.0",
-  "readme": "ERROR: No README data found!",
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "vue"
-    ],
-    "transform": {
-      ".*\\.(vue)$": "vue-jest",
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
-    },
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
-    }
-  }
+  "readme": "ERROR: No README data found!"
 }
